Bug 1797798 - Make sync load of images when there's no existing image work too. r=tnikkel, a=dmeehan

Otherwise the image frame doesn't get the image until the OnImageLoaded
notification arrives. See the test-case on why does this matter.

Differential Revision: https://phabricator.services.mozilla.com/D160659